# mpp

./: .clang-format  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  README.old.md  azure-pipelines.yml  package-lock.json  package.json  tsconfig.json  vcpkg-dependencies.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  clang-format.yml  format.yml  gh_pages.yml  linux.yml  performance_report.yml  test_report.yml
benchmarks/: CMakeLists.txt  format.in.py  format.py.in  lit.site.cfg.in.py  lit.site.cfg.py.in
benchmarks/runtime_benchmarks/: CMakeLists.txt  lit.site.cfg.in.py
benchmarks/src/: algorithms.cpp  arithmetic.cpp  initialization.cpp  inverse.cpp  operations.cpp  utilities.cpp
benchmarks/src/determinant/: test.cpp
benchmarks/src/inverse/: test.cpp
code_coverage/: CMakeLists.txt  dummy_main.cpp
dev/bench/: data.js
doc/: CHANGELOG.md  TODO.md
docs/: TODO.md  algos.md  algos_rendered.md  customize.md  demo.md  more_iter_funcs.md  utils.md
include/matrixpp/: algorithm.hpp  arithmetic.hpp  matrix.hpp  matrixpp.hpp  operations.hpp  utilities.hpp  utility.hpp
include/matrixpp/algorithm/: block.hpp  determinant.hpp  inverse.hpp  transpose.hpp
include/matrixpp/arithmetic/: add.hpp  divide.hpp  multiply.hpp  subtract.hpp
include/matrixpp/detail/: algo_types.hpp  constraints.hpp  expr_base.hpp  expr_binary_constant_op.hpp  expr_binary_op.hpp  matrix_base.hpp  matrix_def.hpp  matrix_dynamic_rows_static_columns.tpp  matrix_fully_dynamic.tpp  matrix_fully_static.tpp  matrix_static_rows_dynamic_columns.tpp  public_tags.hpp  tag_invoke.hpp  utility.hpp
include/matrixpp/matrix/: dynamic_columns.hpp  dynamic_rows.hpp  fully_dynamic.hpp  fully_static.hpp
include/mpp/: algorithm.hpp  arith.hpp  arithmetic.hpp  mat.hpp  matrix.hpp  mpp.hpp  util.hpp  utility.hpp
include/mpp/algo/: block.hpp  (+6 more)
public/: index.html  manifest.json
src/: App.jsx  CodeBlock.jsx  Home.jsx  Home.tsx  NavigationBar.jsx  NavigationBar.tsx  index.js  index.tsx
src/ts/: CodeBlock.tsx  ExampleCodes.ts  Home.tsx  NavigationBar.tsx
test/: CMakeLists.txt
test/compile_test/: CMakeLists.txt  CMakeLists.txt.in  compile_test.py  expected_results.txt  lit.cfg.py  lit.site.cfg.py.in
test/compile_test/instantiate/1d_range_constructor/: test.cpp
test/compile_test/instantiate/4d_range_constructor/: test.cpp
test/compile_test/instantiate/non_arithmetic_type/: test.cpp
test/compile_test/instantiate_non_arithmetic_type/: test.cpp
test/performance_test/: CMakeLists.txt
test/performance_test/determinant/: test.cpp
test/performance_test/inverse/: test.cpp
test/unit_test/: CMakeLists.txt  gtest_main.cpp  lit.cfg.py  lit.site.cfg.py.in
test/unit_test/determinant/: test.cpp
test/unit_test/inverse/: test.cpp
tests/: CMakeLists.txt
tests/compile_tests/: CMakeLists.txt  CMakeLists.txt.in  compile_test.py  lit.cfg.py  lit.site.cfg.in.py  lit.site.cfg.py  lit.site.cfg.py.in
tests/compile_tests/instantiate/3d_range_constructor/: test.cpp
tests/compile_tests/instantiate/non_arithmetic_type/: test.cpp
tests/compile_tests/src/: 1d_range_constructor.cpp  3d_range_constructor.cpp  allocator_aware_container.cpp  container_requirements.cpp  customization.cpp  customize_cpos.cpp  customize_default_extents.cpp  deduction_guides.cpp  deduction_guides_expr_template.cpp  deduction_guides_initializer_list_2d.cpp  deduction_guides_rng_2d.cpp  iterator_requirements.cpp  non_arithmetic_type.cpp  one_side_zero_and_other_non_zero.cpp  rule_of_five.cpp
tests/compile_tests/src/1d_range_constructor/: test.cpp
tests/compile_tests/src/2d_range_constructor/: test.cpp
tests/compile_tests/src/non_arithmetic_type/: test.cpp
tests/include/: dummy_expr.hpp  test_utilities.hpp  utility.hpp  utility_traits.hpp  utils.hpp
tests/src/: algorithms.cpp  algos.cpp  arithmetic.cpp  ariths.cpp  assign.cpp  assignment.cpp  customization.cpp  customize.cpp  init.cpp  initialization.cpp  iter.cpp  iterator.cpp  mem_fns.cpp  utilities.cpp  utils.cpp
tests/test_data/algorithm/block/: 4x4_2x2_2_2_3_3.txt
tests/test_data/algorithm/det/: 1x1.txt  20x20.txt  2x2.txt
tests/test_data/algorithm/inv/: 10x10.txt
tests/test_data/algorithm/trps/: 50x2.txt
tests/test_data/algos/block/: 3x3_1x1_0_0_0_0.txt
tests/test_data/algos/det/: 10x10.txt
tests/test_data/algos/fwd_sub/: 4x4_4x1.txt
tests/test_data/algos/inv/: 2x2.txt  3x3_int.txt
tests/test_data/algos/lu/: 2x2.txt
tests/test_data/algos/trps/: 3x2.txt
tests/test_data/arithmetic/: 2x3_add.txt  2x3_divide.txt
tests/test_data/ariths/: 2x3_multiply.txt
tests/test_data/assign/: 2x10_2x3_shrink.txt
tests/test_data/assignment/: 2x3_10x10_expand_dyn_mat.txt  2x3_same_dims.txt
tests/test_data/init/: 2x3_callable.txt  2x3_init_copy_and_move.txt  2x3_val.txt
tests/test_data/initialization/: 2x3_rng_1d.txt
tests/test_data/utilities/cmp_elems/: 0x0_0x0.txt  3x3_3x3.txt
tests/test_data/utilities/cmp_size/: 0x0_0x0.txt
tests/test_data/utilities/sg/: 0x0.txt  2x2.txt
tests/test_data/utilities/sq/: 3x2.txt
tests/test_data/utils/cmp_elems/: 1x1_1x1.txt
tests/test_data/utils/sg/: 1x1.txt
tests/test_data/utils/sq/: 1x2.txt
tests/test_data/utils/type/: dyn.txt
tests/unit_tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.in.py  lit.site.cfg.py.in
tests/unit_tests/determinant/: test.cpp
tests/unit_tests/include/: dummy_expr.hpp
tests/unit_tests/src/: arithmetic.cpp  block.cpp  cast.cpp  container_member_functions.cpp  customization.cpp  determinant.cpp  equality.cpp  initialization.cpp  inverse.cpp  iterator.cpp  math_operations.cpp  singular.cpp  transpose.cpp  type.cpp
tests/unit_tests/src/determinant/: test.cpp
tests/unit_tests/src/equality/: test.cpp
tests/unit_tests/src/initialization/: test.cpp
tests/unit_tests/src/inverse/: test.cpp
tests/unit_tests/src/type_casting/: test.cpp
tools/: pylint_recursive.py  run_clang_format.py
website/: package.json  tsconfig.json
website/public/: index.html
website/src/: index.tsx
(+105 files in other folders)
